# diffSPH

./: .gitignore  LICENSE  README.md  dsl.py  install.md  pyproject.toml  requirements.txt
examples/compressible/: KevinHelmHoltz.ipynb  LinearWave.ipynb  doubleBlastwave.ipynb  hydrostatic_2d.ipynb  kidder.ipynb  kidder.py  noh_1d.ipynb  rayleighTaylor2d.ipynb  sedov.py  sedov_1d.ipynb  sedov_2d.ipynb  sod_1d.ipynb  sod_benchmark.csv  sod_benchmark.ipynb  sod_grad copy.ipynb  sod_grad.ipynb
examples/weaklyCompressible/: 01_impact_spheres.ipynb  02_impact_squares.ipynb  03_RotatingSquarePatch.ipynb  04_OscillatingDroplet.ipynb  05_TGV.ipynb  06_periodicRandomFlow.ipynb  07_boundedRandomFlow.ipynb  08_Kolmogorov.ipynb  09_LDC.ipynb  10_Couette.ipynb  11_RPF.ipynb  12_movingObstacle.ipynb  13_DrivenSquare.ipynb  14_HydroStatic.ipynb  15_Dambreak.ipynb  16_SloshingTank.ipynb  17_StillWater.ipynb  18_flowPastObstacle.ipynb  KolmogorovGuastoni.ipynb  LDC.ipynb  TaylorCouette_dontuse.ipynb  exampleUtil.py  freeSurfaceDetection.ipynb  inletOutlet.ipynb  todo_pouseille.ipynb  videoGenerator.ipynb
gradients/: autoShift copy.ipynb  autoShift.ipynb  autodiff.ipynb  fixPoint.ipynb  init_cdf.ipynb  kernelAutograd.ipynb  rhoGrad.ipynb
learning/: hocData.ipynb  hocTrain.ipynb  kernelLearning.ipynb  ml.py  networkTest.ipynb
src/sphMath/: boundary.py  enums.py  finiteDifference.py  ghost.py  gradientUtil.py  integration.py  io.py  kernels.py  (+15 more)
waveEquation/: backwards.ipynb  ml.py  test.ipynb  trainWave.ipynb  waveEqn.ipynb  waveEqn.py  waveEqnInTheLoop.ipynb  waveEquationDemo.ipynb
(+103 files in other folders)
